syntax = "proto3";

message GenerateTokenRequest {
  string user_id = 1;
}

message Token {
  string token = 1;
}

message ValidationResponse {
  bool is_valid = 1;
}

service TokenService {
  rpc GenerateToken(GenerateTokenRequest) returns (Token);
  rpc ValidateToken(Token) returns (ValidationResponse);
}
